--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -19,7 +19,7 @@ add_compile_definitions(
     GLFW_INCLUDE_NONE
 )
 
-target_link_libraries(App Core)
+target_link_libraries(App Akira)
 
 target_include_directories(App PRIVATE Source)
 
