--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(Splitter)
+project(Akira)
 
 set(CMAKE_CXX_STANDARD 23)
 
@@ -11,5 +11,5 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 include(Dependencies.cmake)
 
 # Projects
-add_subdirectory(Core)
+add_subdirectory(Akira)
 add_subdirectory(App)
