--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -6,6 +6,8 @@ set(SOURCES
     Source/Main.cpp
     Source/AppLayer.h
     Source/AppLayer.cpp
+    Source/VoidLayer.h
+    Source/VoidLayer.cpp
 )
 
 add_executable(App)
