Fix: copy shaders to build folder to run
prepare overlayer

--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -29,3 +29,9 @@ target_include_directories(App PRIVATE Source)
 set_target_properties(App PROPERTIES
     VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/App"
 )
+
+
+add_custom_target(copy_shaders
+        COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_SOURCE_DIR}/App/Shaders" "${CMAKE_CURRENT_BINARY_DIR}/Shaders"
+    )
+    add_dependencies(App copy_shaders)
